즐겨찾기, 축척 디자인, 중식, 위성지도 추가

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
       background:
         linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)),
-        url('C:/Users/CDW/HTML_Webclass/media/MainPage_kBU.jpg') no-repeat center/cover fixed;
+        url('C:\Users\DW\Web_Matzip\Web_Matzip\media\MainPage_kBU.jpg') no-repeat center/cover fixed;
       color: #333;
       line-height: 1.6;
     }
@@ -110,7 +110,7 @@
     .category.map {
       background-image:
         linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)),
-        url('C:/Users/CDW/HTML_Webclass/media/Map_icon.png');
+        url("C:/Users/DW/Web_Matzip/Web_Matzip/media/Map_icon.png");
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover, 160px 160px;
