--- a/map.html
+++ b/map.html
@@ -61,6 +61,11 @@
       box-shadow: 0 2px 4px rgba(0,0,0,0.2);
       transition: background 0.2s;
     }
+    .btn-container button.active {
+  background: #2e7d32;
+  color: #fff;
+  border: 2px solid #fff176;
+}
     .btn-container button:hover {
       background: #45a049;
     }
@@ -358,9 +363,17 @@
       popupAnchor: [1, -34],
       shadowSize: [41, 41]
     });
+    var greenIcon = new L.Icon({
+      iconUrl: "https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png",
+      shadowUrl: "https://unpkg.com/leaflet@1.7.1/dist/images/marker-shadow.png",
+      iconSize: [25, 41],
+      iconAnchor: [12, 41],
+      popupAnchor: [1, -34],
+      shadowSize: [41, 41]
+    });
     
     // 기본 마커: 한국성서대학교 (페이지 진입 시)
-    var homeMarker = L.marker([37.648694, 127.064194], { icon: blueIcon })
+    var homeMarker = L.marker([37.648694, 127.064194], { icon: greenIcon })
       .addTo(map)
       .bindPopup("<strong>한국성서대학교</strong>")
       homeMarker.openPopup(); // 페이지 진입 시 팝업 열기
@@ -505,7 +518,7 @@ var popup = '<div style="text-align:center;">' +
       {
         coords: [37.6499047712494, 127.061313311302],
         name: "신화쭈꾸미",
-        img: "C:/Users/CDW/HTML_Webclass/media/영성식당.jpg",
+        img: "media/한식 간판/신화쭈꾸미.jpg",
         partner: true,
         info: "1인당 1000원 할인 (철판요리)",
         location: "서울 노원구 상계동 746-5",
@@ -515,7 +528,7 @@ var popup = '<div style="text-align:center;">' +
       {
         coords: [37.6531812103228, 127.058625072693],
         name: "예향정 노원점",
-        img: "https://via.placeholder.com/120?text=예향정",
+        img: "media/한식 간판/예향정.jpg",
         partner: false,
         info: "",
         location: "서울 노원구 상계동 735-4",
@@ -525,7 +538,7 @@ var popup = '<div style="text-align:center;">' +
       {
         coords: [37.6556023679915, 127.065082545269],
         name: "빽돈 노원점",
-        img: "https://via.placeholder.com/120?text=빽돈노원점",
+        img: "media/한식 간판/빽돈.jpg",
         partner: false,
         info: "",
         location: "서울 노원구 상계동 323-29",
@@ -535,7 +548,7 @@ var popup = '<div style="text-align:center;">' +
       {
         coords: [37.6566468253976, 127.063019549815],
         name: "쭈꾸미달인 노원점",
-        img: "https://via.placeholder.com/120?text=쭈꾸미달인",
+        img: "media/한식 간판/쭈꾸미달인.jpg",
         partner: false,
         info: "",
         location: "서울 노원구 상계동 595",
@@ -545,7 +558,7 @@ var popup = '<div style="text-align:center;">' +
       {
         coords: [37.6563995709767, 127.062217896578],
         name: "고기싸롱 노원역점",
-        img: "https://via.placeholder.com/120?text=고기싸롱",
+        img: "media/한식 간판/고기싸롱.jpg",
         partner: false,
         info: "",
         location: "서울 노원구 상계동 602-3",
@@ -555,7 +568,7 @@ var popup = '<div style="text-align:center;">' +
       {
         coords: [37.6552277602079, 127.06355754897],
         name: "샐러디 노원역점",
-        img: "https://via.placeholder.com/120?text=샐러디",
+        img: "media/한식 간판/샐러디.jpg",
         partner: true,
         info: "매장 이용시 10% 할인",
         location: "서울 노원구 상계동 717-1",
@@ -565,7 +578,7 @@ var popup = '<div style="text-align:center;">' +
       {
         coords: [37.6499764090371, 127.069118959728],
         name: "열정국밥 노원구중계점",
-        img: "https://via.placeholder.com/120?text=열정국밥",
+        img: "media/한식 간판/열정국밥.jpg",
         partner: false,
         info: "",
         location: "서울특별시 노원구 덕릉로71길 5 상가동 1층 103, 104호(중계동, 성원아파트)",
@@ -574,8 +587,8 @@ var popup = '<div style="text-align:center;">' +
       },
       {
         coords: [37.653381980665, 127.059640820591],
-        name: "신의 한국수 노원점",
-        img: "https://via.placeholder.com/120?text=신의한국수",
+        name: "신의한국수 노원점",
+        img: "media/한식 간판/신의한국수.jpg",
         partner: false,
         info: "",
         location: "서울특별시 노원구 동일로217가길 13 1층(상계동, 광일빌딩)",
@@ -585,7 +598,7 @@ var popup = '<div style="text-align:center;">' +
       {
         coords: [37.6557918268818, 127.062277905261],
         name: "미아리우동집 노원점",
-        img: "https://via.placeholder.com/120?text=미아리우동집",
+        img: "media/한식 간판/미아리우동집.jpg",
         partner: false,
         info: "",
         location: "서울특별시 노원구 상계로 64 화랑빌딩 1층 7호(상계동)",
@@ -595,7 +608,7 @@ var popup = '<div style="text-align:center;">' +
       {
         coords: [37.6554668710187, 127.070549223719],
         name: "오빠네 제육",
-        img: "https://via.placeholder.com/120?text=오빠네제육",
+        img: "media/한식 간판/오빠네제육.png",
         partner: false,
         info: "",
         location: "서울특별시 노원구 상계로12길 68 1층 102호(상계동)",
@@ -608,7 +621,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.6479919478235, 127.062242496877],
     name: "슈엔차이",
-    img: "https://via.placeholder.com/120?text=슈엔차이",
+    img: "media/중식 간판/슈엔차이.png",
     partner: false,
     info: "",
     location: "서울 노원구 상계동 763-4",
@@ -618,7 +631,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.649408246899, 127.062330705355],
     name: "금화 반점",
-    img: "https://via.placeholder.com/120?text=금화반점",
+    img: "media/중식 간판/금화반점.png",
     partner: false,
     info: "",
     location: "서울 노원구 상계동 749-7",
@@ -628,7 +641,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.6498808620377, 127.062236934343],
     name: "중식당규규",
-    img: "https://via.placeholder.com/120?text=규규",
+    img: "media/중식 간판/중식당규규.jpg",
     partner: false,
     info: "",
     location: "서울 노원구 동일로 1356 상가동2층 212호",
@@ -638,7 +651,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.6544548276974, 127.062677840248],
     name: "가양 훠궈 샤브샤브",
-    img: "https://via.placeholder.com/120?text=가양훠궈",
+    img: "media/중식 간판/가양훠궈 샤브샤브.jpg",
     partner: false,
     info: "",
     location: "서울 노원구 노해로 492 2층 203호",
@@ -648,7 +661,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.6551188125687, 127.063089199491],
     name: "탕화쿵푸마라탕 노원역점",
-    img: "https://via.placeholder.com/120?text=탕화쿵푸",
+    img: "media/중식 간판/탕화쿵푸마라탕 노원역점.png",
     partner: false,
     info: "",
     location: "서울 노원구 노해로 495 202호",
@@ -658,7 +671,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.6557918268818, 127.062277905261],
     name: "신미방 마라탕 노원점",
-    img: "https://via.placeholder.com/120?text=신미방마라탕",
+    img: "media/중식 간판/신미방 마라탕 노원점.jpg",
     partner: false,
     info: "",
     location: "서울 노원구 상계로 64 1층 2호",
@@ -668,7 +681,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.6559815855142, 127.064601468448],
     name: "청도양꼬치 노원점",
-    img: "https://via.placeholder.com/120?text=청도양꼬치",
+    img: "media/중식 간판/청도양꼬치 노원점.jpg",
     partner: false,
     info: "",
     location: "서울 노원구 노해로83길 18-6 2층",
@@ -678,7 +691,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.6563543249568, 127.062249590194],
     name: "춘리마라탕 노원점",
-    img: "https://via.placeholder.com/120?text=춘리마라탕",
+    img: "media/중식 간판/춘리마라탕 노원점.jpg",
     partner: false,
     info: "",
     location: "서울 노원구 상계로 65",
@@ -688,7 +701,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.6572141183604, 127.062275580083],
     name: "헌경양꼬치",
-    img: "https://via.placeholder.com/120?text=헌경양꼬치",
+    img: "media/중식 간판/헌경양꼬치.jpg",
     partner: false,
     info: "",
     location: "서울 노원구 상계로3길 21 202호",
@@ -698,7 +711,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.6567065402567, 127.062549747122],
     name: "훠궈나라 노원점",
-    img: "https://via.placeholder.com/120?text=훠궈나라",
+    img: "media/중식 간판/훠궈나라 노원점.jpg",
     partner: false,
     info: "",
     location: "서울 노원구 상계로3길 10 1층",
@@ -708,7 +721,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.6506100117206, 127.061234228831],
     name: "라사천마라탕 노원점",
-    img: "https://via.placeholder.com/120?text=라사천마라탕",
+    img: "media/중식 간판/라사천마라탕 노원점.png",
     partner: false,
     info: "",
     location: "서울 노원구 동일로 1365 지하1층 113호",
