지도 중식, 일식 완성

--- a/map.html
+++ b/map.html
@@ -641,7 +641,7 @@ var popup = '<div style="text-align:center;">' +
   {
     coords: [37.6498808620377, 127.062236934343],
     name: "중식당규규",
-    img: "media/중식 간판/중식당규규.jpg",
+    img: "media/중식 간판/중식당 규규.jpg",
     partner: false,
     info: "",
     location: "서울 노원구 동일로 1356 상가동2층 212호",
@@ -733,7 +733,7 @@ var japaneseShops = [
   {
     coords: [37.648494374797, 127.061997930473],
     name: "노원돈부리",
-    img: "https://via.placeholder.com/120?text=노원돈부리",
+    img: "media/일식 간판/노원돈부리.jpg",
     partner: false,
     info: "",
     location: "서울 노원구 동일로 1343 동일프라자빌딩",
@@ -743,7 +743,7 @@ var japaneseShops = [
   {
     coords: [37.650122369351855, 127.06146590136503],
     name: "수유리우동집 상계백병원점",
-    img: "https://via.placeholder.com/120?text=수유리우동집",
+    img: "media/일식 간판/수유리우동집 상계백병원점.JFIF",
     partner: true,
     info: "우동면, 잔치면 곱빼기 제공 (1인당 면류 하나 이상 주문)",
     location: "서울 노원구 동일로 1361 주공 2단지 상가 113호",
@@ -753,7 +753,7 @@ var japaneseShops = [
   {
     coords: [37.64974810982212, 127.06213699191336],
     name: "밀알생돈까스",
-    img: "https://via.placeholder.com/120?text=밀알생돈까스",
+    img: "media/일식 간판/밀알생돈까스.JFIF",
     partner: true,
     info: "8500원 이상 결제시 500원 할인",
     location: "서울 노원구 동일로 1356 상가동 213호",
@@ -763,7 +763,7 @@ var japaneseShops = [
   {
     coords: [37.6573394320599, 127.062129151875],
     name: "마카나이 노원점",
-    img: "https://via.placeholder.com/120?text=마카나이",
+    img: "media/일식 간판/마카나이 노원점.JFIF",
     partner: false,
     info: "",
     location: "서울 노원구 상계로1길 14-29 1층",
@@ -773,7 +773,7 @@ var japaneseShops = [
   {
     coords: [37.65134980418283, 127.06176154168143],
     name: "스시웨이 노원점",
-    img: "https://via.placeholder.com/120?text=스시웨이",
+    img: "media/일식 간판/스시웨이 노원점.jpg",
     partner: false,
     info: "",
     location: "서울 노원구 동일로 1374 미산빌딩 2층",
@@ -783,7 +783,7 @@ var japaneseShops = [
   {
     coords: [37.65419837690444, 127.06324276673256],
     name: "홋코리동",
-    img: "https://via.placeholder.com/120?text=홋코리동",
+    img: "media/일식 간판/홋코리동.jpg",
     partner: false,
     info: "",
     location: "서울 노원구 동일로218길 41 1층 103호",
@@ -793,7 +793,7 @@ var japaneseShops = [
   {
     coords: [37.6564745272749, 127.067943554213],
     name: "카레후카미&수제카츠 노원점",
-    img: "https://via.placeholder.com/120?text=카레후카미",
+    img: "media/일식 간판/카레후카미&수제카츠 노원점.JFIF",
     partner: false,
     info: "",
     location: "서울 노원구 상계로10길 23 1층",
@@ -803,7 +803,7 @@ var japaneseShops = [
   {
     coords: [37.6589435497049, 127.06462658759054],
     name: "수시로 스시",
-    img: "https://via.placeholder.com/120?text=수시로스시",
+    img: "media/일식 간판/수시로 스시.JFIF",
     partner: false,
     info: "",
     location: "서울 노원구 노원로 479 1층",
@@ -813,7 +813,7 @@ var japaneseShops = [
   {
     coords: [37.6467905319279, 127.070940893709],
     name: "스시고칸 중계점",
-    img: "https://via.placeholder.com/120?text=스시고칸",
+    img: "media/일식 간판/스시고칸 중계점.JFIF",
     partner: false,
     info: "",
     location: "서울 노원구 노원로 330 지하1층",
@@ -823,7 +823,7 @@ var japaneseShops = [
   {
     coords: [37.650813215261486, 127.07784090734175],
     name: "스시소리",
-    img: "https://via.placeholder.com/120?text=스시소리",
+    img: "media/일식 간판/스시소리.JFIF",
     partner: false,
     info: "",
     location: "서울 노원구 중계로 202 1층",
